Inter process communication(toList (working version with Collection))